# photo-magic

./: .env.example  .gitignore  .npmrc  .opencodeignore  INTEGRATION-NOTES.md  README.md  biome.json  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.workspace.ts
.github/: pull_request_template.md
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routers/: health.py  jobs.py  uploads.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: session.py
apps/api/app/schemas/: common.py
apps/web/: .env.example  instrumentation.ts  next.config.ts  package.json  tsconfig.json
apps/web/src/: env.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/(auth)/: auth.css  layout.tsx
apps/web/src/app/account/: account.css  page.tsx
apps/web/src/app/checkout/: checkout.css  page.tsx
apps/web/src/app/editor/: page.tsx
apps/web/src/app/legal/: layout.tsx  page.tsx
apps/web/src/app/plans/: page.tsx  plans.css
apps/web/src/app/report/: page.tsx
apps/web/src/lib/: features.ts  sentry.client.ts
deploy/photo-magic/: docker-compose.yml  nginx.conf
openspec/changes/photo-magic-v1/: design-system.md  design.md  proposal.md  tasks.md
research/: 01-competitive-analysis.md  01-competitors.md  02-tech-stack-evaluation.md  02-tech-stack.md  03-sns-upload-api.md  04-legal-ethics.md  05-webgl-webgpu-performance.md  06-korean-sns-trends.md
(+79 files in other folders)
