[project]
name = "photo-magic-api"
version = "0.1.0"
description = "Photo Magic API service (FastAPI + Celery + SQLAlchemy)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "photo-magic" }]

dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.14.0,<2.0.0",
    "redis>=5.2.0,<6.0.0",
    "celery>=5.4.0,<6.0.0",
    "sentry-sdk[fastapi]>=2.18.0,<3.0.0",
    "python-multipart>=0.0.18,<0.1.0",
    "boto3>=1.35.0,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0,<0.9.0",
    "mypy>=1.13.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "httpx>=0.28.0,<0.29.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
